// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /internships/:id/fsm ChangeState_ARCHIVED_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "validated",
  "startAt": null,
  "state": "archived",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_ATTRIBUTED_MENTOR_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": Object {
    "createdAt": Any<String>,
    "email": "john.doe@enib.fr",
    "firstName": "John",
    "id": 2,
    "lastName": "Doe",
    "role": "default",
    "updatedAt": Any<String>,
  },
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "attributed_mentor",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": Object {
    "createdAt": Any<String>,
    "description": "A description to test",
    "endAt": 20191012,
    "id": 2,
    "isPublish": true,
    "maxProposition": 2,
    "name": "test",
    "semester": "S5",
    "startAt": 0,
    "updatedAt": Any<String>,
  },
}
`;

exports[`POST /internships/:id/fsm ChangeState_ATTRIBUTED_STUDENT_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "attributed_student",
  "student": Object {
    "createdAt": Any<String>,
    "email": "john.doe@enib.fr",
    "firstName": "John",
    "id": 1,
    "lastName": "Doe",
    "semester": "S10",
    "updatedAt": Any<String>,
  },
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_CAMPAIGN_AVAILABLE_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": Object {
    "createdAt": Any<String>,
    "description": "A description to test",
    "endAt": 20191012,
    "id": 1,
    "isPublish": true,
    "maxProposition": 2,
    "name": "test",
    "semester": "S5",
    "startAt": 0,
    "updatedAt": Any<String>,
  },
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "available_campaign",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_PUBLISHED_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": Any<Number>,
  "result": "unknown",
  "startAt": null,
  "state": "published",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_RUNNING_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 21356456125645,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": Any<Number>,
  "state": "running",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_VALIDATION_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": null,
  "result": "unknown",
  "startAt": null,
  "state": "archived",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`POST /internships/:id/fsm ChangeState_WAITING_200 1`] = `
Object {
  "additional": null,
  "address": null,
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": null,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "mentor": null,
  "postalCode": null,
  "propositions": Array [],
  "publishAt": 0,
  "result": "unknown",
  "startAt": null,
  "state": "waiting",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;
